# chromatic_aberration_filtering

./: .gitignore  README.md  meson.build  pyproject.toml
.github/workflows/: wheels.yml
chromatic_aberration_filtering/: __init__.py  chromatic_aberration_correction.pyx  meson.build
examples/: example_correction.py
